[package]
name = "allnations"
version = "0.1.3"
authors = ["douglasmg7 <douglasmg7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
once_cell = "1.4.0"
xml-rs = "0.8.3"
rusqlite = "0.23.1"
