[package]
name = "allnations"
version = "0.1.3"
authors = ["douglasmg7 <douglasmg7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
chrono = "0.4.13"
futures = "0.3.5"
once_cell = "1.4.0"
sqlx = { version = "0.4.0-beta.1", features = ["sqlite"] }
xml-rs = "0.8.3"
