[package]
name = "allnations"
version = "0.0.1"
authors = ["douglasmg7 <douglasmg7@gmail.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4.11", features = ["std"] }
lazy_static = "1.4.0"
chrono = "0.4.13"
xml-rs = "0.8.3"
rusqlite = { version = "0.23.1", features = ["chrono"] }
time = "0.2.16" # Used by examples.
